Correct extra padding when a page is set to 100% page width and enable spacing for the top of the content on a page.

--- a/resources/assets/styles/components/_homepage.scss
+++ b/resources/assets/styles/components/_homepage.scss
@@ -4,7 +4,7 @@ body {
 
 @include media($nav-width) {
   .no-hero {
-    margin-top: 12rem;
+    margin-top: 11.5rem;
   }
 }
 
